--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
   },
   "dependencies": {
     "@types/nprogress": "^0.2.0",
+    "@xcedu/web-share": "^1.0.1",
     "axios": "0.19.2",
     "element-ui": "2.13.0",
     "nprogress": "0.2.0",
