--- a/package.json
+++ b/package.json
@@ -83,7 +83,6 @@
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
     "url-loader": "^3.0.0",
-    "vue-giant-tree": "^0.1.2",
     "vue-loader": "^15.9.0",
     "vue-server-renderer": "^2.6.11",
     "vue-style-loader": "^4.1.2",
@@ -96,8 +95,9 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^3.2.2",
     "@types/nprogress": "^0.2.0",
-    "@xcedu/web-share": "^1.0.2",
+    "@xcedu/web-share": "^1.0.9",
     "axios": "0.19.2",
     "element-ui": "2.13.0",
     "nprogress": "0.2.0",
@@ -106,6 +106,7 @@
     "systemjs-webpack-interop": "^2.0.0",
     "vue": "2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-giant-tree": "^0.1.2",
     "vue-property-decorator": "8.4.0",
     "vue-router": "3.1.5",
     "vuex": "3.1.2",
